<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    android:padding="8dp"
    android:layout_margin="8dp">

            <TextView
                android:id="@+id/punchDurationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4_hours_20_minutes"
                android:layout_toEndOf="@id/editPunchCardImageView"
                android:layout_marginStart="8dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <ImageView
                android:id="@+id/editPunchCardImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/baseline_edit_24"
                android:contentDescription="@string/edit_button" />

            <ImageView
                android:id="@+id/deletePunchCardImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:src="@drawable/baseline_delete_forever_24"
                android:contentDescription="@string/delete_button" />

            <TextView
                android:id="@+id/punchInTextView"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/punchDurationTextView"
                android:layout_marginTop="4dp"
                android:text="@string/punch_in_12_40_pm"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/punchOutTextView"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/punchDurationTextView"
                android:text="@string/punch_out_6_40_pm"
                android:textColor="@color/black"
                android:textSize="20sp"/>

</RelativeLayout>