<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/openLogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/baseline_history_24"
        android:contentDescription="@string/open_log_window" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:text="@string/titleText"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="36sp"/>

    <TextView
        android:id="@+id/currentDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/currentDateTime"
        android:textColor="@color/gray"
        android:textSize="48sp" />

    <TextClock
        android:id="@+id/currentTimeTextClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentDateTextView"
        android:format12Hour="h:mm a"
        android:gravity="center"
        android:textColor="@color/gray"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/clockedInOutTextView"
        android:layout_below="@id/currentTimeTextClock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/clockedOutDurationTextView"
        android:layout_below="@id/clockedInOutTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/red"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextClock
        android:id="@+id/timeCounterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clockedOutDurationTextView"
        android:layout_marginTop="48dp"
        android:background="@color/gray"
        android:format12Hour="@string/timeCounter"
        android:text="@string/timeCounter"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="64sp" />

    <TextView
        android:id="@+id/clockInOutButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/timeCounterTextView"
        android:layout_width="288dp"
        android:layout_height="144dp"
        android:layout_marginTop="48dp"
        android:background="@color/green"
        android:gravity="center"
        android:text="@string/clockInOut"
        android:textColor="@color/black"
        android:textSize="48sp" />


</RelativeLayout>